--- a/problem/ionicwind2/writeup/chen_simulation_setup.tex
+++ b/problem/ionicwind2/writeup/chen_simulation_setup.tex
@@ -18,16 +18,9 @@
 \renewcommand{\thesection}{\arabic{section}}
 \usepackage{gensymb}
 \usepackage{amssymb}
-\usepackage{hyperref}
 % \usepackage{physics}
 \usepackage{amsmath,mleftright}
 % \usepackage{unicode-math} % also loads fontspec
-\hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=magenta,      
-    urlcolor=cyan,
-}
 
 \usepackage{xcolor}
 \definecolor{light-gray}{gray}{0.95}
@@ -53,6 +46,13 @@
 % For code block insertion
 \usepackage{listings}
 \usepackage{color}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
@@ -95,11 +95,11 @@ The following equations constitute equations 1-5 in Chen et al. They will be sol
 \end{equation}
 
 \begin{equation}
-    \frac{\partial n_p}{\partial t} + \nabla \cdot (\mu_p\vec{E}n_p - D_p\nabla n_p) = \alpha n_e|\mu_e\vec{E}| - k_{np}n_nn_p - k_{ep}n_en_p
+    \frac{\partial n_n}{\partial t} + \nabla \cdot (-\mu_n\vec{E}n_n - D_n\nabla n_n) = \eta n_e|\mu_e\vec{E}| - k_{np}n_nn_p
 \end{equation}
 
 \begin{equation}
-    \frac{\partial n_n}{\partial t} + \nabla \cdot (-\mu_n\vec{E}n_n - D_n\nabla n_n) = \eta n_e|\mu_e\vec{E}| - k_{np}n_nn_p
+    \frac{\partial n_p}{\partial t} + \nabla \cdot (\mu_p\vec{E}n_p - D_p\nabla n_p) = \alpha n_e|\mu_e\vec{E}| - k_{np}n_nn_p - k_{ep}n_en_p
 \end{equation}
 
 \begin{equation}
@@ -147,12 +147,12 @@ Assuming axial symmetry, the above equations can be written as
 {\bm M} \frac{\partial {\bf U}}{\partial t} +  \frac{1}{r} \frac{\partial (r {\bf F}_r)}{\partial r} +  \frac{\partial {\bf F}_z}{\partial z} -  {\bf S}  = {\bf 0}
 \]
 \end{center}
-Were
+Where
 \begin{equation} 
-{\bm U} = \left( \begin{array}{c} n_e \\ n_p \\ n_n \\ \Phi \end{array} \right),  \quad {\bm F}_r = \left( \begin{array}{c} - \mu_e n_e E_r - D_e (q_e)_r \\ \mu_p n_p E_r - D_p (q_p)_r \\ -\mu_n n_n E_r - D_n (q_n)_r \\ -E_r \end{array} \right),  \quad {\bm F}_z = \left( \begin{array}{c} - \mu_e n_e E_z - D_e (q_e)_z \\ -\mu_p n_p E_z - D_p (q_p)_z \\ -\mu_n n_n E_z - D_n (q_n)_z \\ -E_z \end{array} \right),
+{\bm U} = \left( \begin{array}{c} n_e \\ n_n \\ n_p \\ \Phi \end{array} \right),  \quad {\bm F}_r = \left( \begin{array}{c} - \mu_e n_e E_r - D_e (q_e)_r \\ -\mu_n n_n E_r - D_n (q_n)_r \\ \mu_p n_p E_r - D_p (q_p)_r \\ -E_r \end{array} \right),  \quad {\bm F}_z = \left( \begin{array}{c} - \mu_e n_e E_z - D_e (q_e)_z \\ -\mu_n n_n E_z - D_n (q_n)_z \\ -\mu_p n_p E_z - D_p (q_p)_z \\ -E_z \end{array} \right),
 \end{equation}
 \begin{equation} 
-{\bm S} = \left( \begin{array}{c} \alpha n_e|\mu_e\vec{E}| -\eta n_e|\mu_e\vec{E}| - k_{ep}n_en_p \\ \alpha n_e|\mu_e\vec{E}| - k_{np}n_nn_p - k_{ep}n_en_p \\ \eta n_e|\mu_e\vec{E}| - k_{np}n_nn_p \\ -\frac{e(n_p-n_e-n_n)}{\epsilon} \end{array} \right),  \quad {\bm M} = \left( \begin{array}{cccc} 
+{\bm S} = \left( \begin{array}{c} \alpha n_e|\mu_e\vec{E}| -\eta n_e|\mu_e\vec{E}| - k_{ep}n_en_p \\ \eta n_e|\mu_e\vec{E}| - k_{np}n_nn_p \\ \alpha n_e|\mu_e\vec{E}| - k_{np}n_nn_p - k_{ep}n_en_p \\-\frac{e(n_p-n_e-n_n)}{\epsilon} \end{array} \right),  \quad {\bm M} = \left( \begin{array}{cccc} 
 1 & 0 & 0 & 0 \\
 0 & 1 & 0 & 0 \\
 0 & 0 & 1 & 0 \\
@@ -160,7 +160,7 @@ Were
 \end{equation}
 and
 \begin{equation} 
-{\bm Q} = \left( \begin{array}{cc} (q_e)_r & (q_e)_z \\ (q_p)_r & (q_p)_z \\ (q_n)_r & (q_n)_z \\ -E_r & -E_z \end{array} \right),  
+{\bm Q} = \left( \begin{array}{cc} (q_e)_r & (q_e)_z  \\ (q_n)_r & (q_n)_z \\ (q_p)_r & (q_p)_z\\ -E_r & -E_z \end{array} \right),  
 \end{equation}
 with 
 \begin{equation} 
@@ -171,8 +171,6 @@ Note that under the  axisymmetry assumption, the gradient operators in cylindric
 
 \section{Weak form and the Divergence Theorem}
 The elemental volume becomes $dV = r dr dz$ and for any ${\bf W}$ we can write the following weighted residual form
-
-
 
 \begin{center}
 \[\begin{array}{c} \displaystyle
@@ -210,12 +208,6 @@ The following nondimensional groups were chosen:
     \item $t_{ref} = \frac{r_{tip}}{\mu_{e,ref} E_{bd}}$
     \item $l_{ref} = r_{tip}$
 \end{itemize}
-
-Where
-\begin{itemize}
-    \item 
-\end{itemize}
-
 
 $\mu_{e,ref}$ is taken at the reduced electric field value of $\frac{E_{bd}}{N}$, where $N$, the neutral number density, is computed using the ideal gas equation of state at standard temperature and pressure:
 
@@ -282,78 +274,219 @@ Simplifying:
     \nabla^2\Phi^* = n_e^*+n_n^*-n_p^*
 \end{align*}
 
+\section{Flux and source functions}
+The source and flux functions as they are entered into the code generation script are presented below, accounting for the axisymmetry condition by multiplying by r. The jacobian of each are taken automatically and assembled into the appropriate output format using functions in the MATLAB symbolic toolbox and its symbolic optimization capabilities such as Common Subexpression Elimination (CSE).
+
+Note that for succinctness, the diffusion coefficient for all three species has been normalized as follows:
+
+\begin{equation*}
+    D_{xx}^* = \frac{D_{xx}}{\mu_{e,ref}E_{bd}r_{tip}}
+\end{equation*}
+
+To improve the computational efficiency, the linearity of the Poisson equation is leveraged and the electric field is split into two components. The first component is obtained using a homogeneous solution to the electrostatic equation, i.e. the Laplace equation $\nabla \Phi = 0$, and an inhomogeneous solution accounting for the space charge created by the charged species. The homogeneous solution is solved in a separate simulation and loaded into the simulation during the initialization steps. The boundary conditions for the homogeneous solution reflect the voltage applied to the emitter tip and grounded cylinder and floor, whereas the boundary condition for the inhomogeneous case solved at runtime is uniformly homogeneous dirichlet, with the exception of the axis of symmetry.
+
+The electric field is thus comprised of two components:
+
+\begin{align*}
+    E = E_0 + E'
+\end{align*}
+
+With $E_0$ computed beforehand, and $E'$ representing the (negative) gradient of the electric potential, the fourth solution variable. Also note that since the gradient provided in the code is the negative of the true gradient of the solution variable, the values for the viscous flux appear to be negated.
+
+\subsection*{Flux terms}
+
+\subsubsection*{Equation 1: electron number density}
+\begin{align*}
+    F_{1,r} &= -\left( \frac{\mu_e}{\mu_{e,ref}} \right)E_rn_e + D_e^* \frac{dn_e}{dr}\\
+    F_{1,z} &= -\left( \frac{\mu_e}{\mu_{e,ref}} \right)E_zn_e + D_e^* \frac{dn_e}{dz}
+\end{align*}
+
+\subsubsection*{Equation 2: negative ion number density}
+\begin{align*}
+    F_{2,r} &= -\left( \frac{\mu_n}{\mu_{e,ref}} \right)E_r n_n + D_n^*  \frac{dn_n}{dr}\\
+    F_{2,z} &= -\left( \frac{\mu_n}{\mu_{e,ref}} \right)E_z n_n + D_n^*  \frac{dn_n}{dz}
+\end{align*}
+
+
+\subsubsection*{Equation 3: positive ion number density}
+\begin{align*}
+    F_{3,r} &= \left( \frac{\mu_p}{\mu_{e,ref}} \right)E_rn_p + D_p^*  \frac{dn_p}{dr}\\
+    F_{3,z} &= \left( \frac{\mu_p}{\mu_{e,ref}} \right)E_zn_p + D_p^*  \frac{dn_p}{dz}
+\end{align*}
+
+\subsubsection*{Equation 4: Electric potential}
+
+\begin{align*}
+    F_{4,r} &= E_{r}'\\
+    F_{4,z} &= E_{z}'
+\end{align*}
+
+Assembly:
+% \begin{equation*}
+%     f_{assembled} = r\left[ \textbf{F_r}, \textbf{F_z} \right]
+% \end{equation*}
+
+\begin{equation*}
+    f_{assembled} = r\left[ \textbf{F}_r, \textbf{F}_z \right]
+\end{equation*}
+
+
+\subsection*{Source terms}
+
+\begin{align*}
+    s_e &= (\alpha-\eta)\left( \frac{\mu_e}{\mu_{e,ref}} \right)r_{tip}n_e \lvert E \rvert - \frac{K_{ep}\epsilon_0}{e \mu_{e,\mathrm{ref}}} n_en_p\\
+    s_n &=         eta\left( \frac{\mu_e}{\mu_{e,ref}} \right) r_{tip}n_e \lvert E \rvert -  \frac{K_{np}\epsilon_0}{e \mu_{e,\mathrm{ref}}}n_nn_p\\
+    s_p &=       alpha\left( \frac{\mu_e}{\mu_{e,ref}} \right) r_{tip}n_e \lvert E \rvert - \frac{n_p\epsilon0}{e\mu_{e,\mathrm{ref}}}(K_{np}n_n + K_{ep} n_e)\\
+    s_{\Phi} &= n_p - n_e - n_n
+\end{align*}
+
+
+Assembly:
+\begin{align*}
+    s_{assembled} = r\left[ s_e, s_n, sp, s_{\Phi} \right]
+\end{align*}
+
+\subsection*{Swarm parameters}
+The swarm parameters governing the forward and reverse ionization rates, as well as the electron mobility and diffusivity coefficients, are taken as curve fits of data obtained from the BOLSIG+ solver hosted by the LXCAT website (\href{https://us.lxcat.net/solvers/BolsigPlus/}{https://us.lxcat.net/solvers/BolsigPlus/}). All four parameters are a function of the electric field. For comparison with the literature, they are presented here as a function of the reduced electric field, $\frac{E}{N}$, where $N$ is the neural number density. Here, $N$ is calculated using the ideal gas equation of state at STP conditions: $P=1$atm and $T=300$K. The same conditions were used as inputs to the BOLSIG+ solver. The following curve fits were obtained, with the reduced electric field $\frac{E}{N}$ in Townshend (Td). For most of these equations, a hyperbolic tangent step function was used to transition between different curve fits. This was to minimc a piecewise function while remaining differentiable through the simulation. Here, the logarithm used is base 10.
+
+\subsubsection*{Ionization coefficient $\alpha$}
+
+\begin{equation*}
+    \mathrm{exponent}\left( \frac{E}{N} \right) = \left\{
+            \begin{array}{ll}
+                0 & \quad \frac{E}{N} \leq 20.1\mathrm{Td} \\ \hline
+                -212.327 + 304.251 log \left( \frac{E}{N} \right) \\ -186.287*log \left( \frac{E}{N} \right)^2 \\+ 51.501*log \left( \frac{E}{N} \right)^3 \\-5.362*log \left( \frac{E}{N} \right)^4 & \quad \frac{E}{N} > 20.1\mathrm{Td}
+            \end{array}
+        \right.
+    \end{equation*}
+
+\begin{equation*}
+    \alpha = 10^{\mathrm{exponent}}
+\end{equation*}
+
+\subsubsection*{Recombination coefficient $\eta$}
+
+\begin{equation*}
+    \mathrm{exponent} \left( \frac{E}{N} \right) = \left\{
+            \begin{array}{ll}
+                -40.129 -1.044log \left( \frac{E}{N} \right) & \quad \frac{E}{N} \leq 1.1 \mathrm{Td}\\\hline
+                -125.180 + 168.336log \left( \frac{E}{N} \right)\\ -103.649log \left( \frac{E}{N} \right)^2\\ + 28.456log \left( \frac{E}{N} \right)^3\\ -2.942log \left( \frac{E}{N} \right)^4 & \quad \frac{E}{N} > 1.1\mathrm{Td}
+            \end{array}
+        \right.
+    \end{equation*}
+
+\begin{equation*}
+    \eta = 10^{\mathrm{exponent}}
+\end{equation*}
+
+\subsubsection*{Mobility coefficient $\mu$}
+\begin{equation*}
+    \mu_e = 10^{\left(24.767 -0.348log \left( \frac{E}{N} \right)\right) }
+\end{equation*}
+
+\subsubsection*{Diffusion coefficient $D$}
+
+\begin{equation*}
+    D \left( \frac{E}{N} \right) = \left\{
+            \begin{array}{ll}
+                3.477\times 10^{23}log \left( \frac{E}{N} \right)\\ + 1.413\times 10^{24} & \quad \frac{E}{N} \leq 1.9 \mathrm{Td} \\\hline
+                4.633\times 10^{24}log \left( \frac{E}{N} \right)\\ + -6.700\times 10^{24} & \quad \frac{E}{N} > 1.9 \mathrm{Td}
+            \end{array}
+        \right.
+    \end{equation*}
+
+\section{Initial Conditions}
+A gaussian IC is used for the electrons and positive ions. Using the same distribution ensures that charge conservation is obeyed, but the number density is high enough to initiate the discharge process at the emitter tip. The initial number density for the negative ions is zero across the entire domain.
+
+\begin{table}[htbp]
+    \centering\begin{tabular}{c|c}
+        $n_e$, $n_p$ &  $N_{max}^* \mathrm{exp}\left( \frac{-1}{2\sigma_{0}^{*2}} ((r-r_0^{*})^2 + (z-z_0^*)^2) \right)$    \\
+        $\frac{dn_e}{dr}$, $\frac{dn_p}{dr}$ &  $N_{max}^* \mathrm{exp}\left( \frac{-1}{2\sigma_{0}^{*2}} ((r-r_0^{*})^2 + (z-z_0^*)^2) \right) \frac{r-r_0^{*2}}{\sigma_{0}^{*2}}$  \\
+        $\frac{dn_e}{dz}$, $\frac{dn_p}{dz}$ &  $N_{max}^* \mathrm{exp}\left( \frac{-1}{2\sigma_{0}^{*2}} ((r-r_0^{*})^2 + (z-z_0^*)^2) \right) \frac{z-z_0^{*2}}{\sigma_{0}^{*2}}$  \\
+    \end{tabular}
+    \caption{Boundary conditions for the electrons and positives.}
+    \label{<label>}
+\end{table}
+
+The following values are used to define the initial condition:
+\begin{itemize}
+    \item $N_{max}^*$ = $\frac{N_{max}}{n_{ref}}$ = $\frac{N_{max}}{\frac{\epsilon_0E_{bd}}{e r_{tip}}}$
+    \item $\sigma_0^*$ = $\frac{\sigma_0}{r_{tip}}$
+\end{itemize}
 
 \section{\bf \large Boundary Conditions}
-Note: Boundary numbering follows the boundary numbering in the paper
-\subsection{Boundary 1}
+Note: Boundary numbering follows the boundary numbering in the paper.
+
+\subsection{Boundary 1: Needle Tip}
 
 \begin{table}[!h]
-    \centering\begin{tabular}{c|c|c}
-        Equation & Boundary condition & Boundary condition type\\ \hline
-        1 & Total flux $-\vec{n} \cdot\left(-\mu_{\mathrm{e}} \vec{E} -D_{\mathrm{e}} \nabla n_{\mathrm{e}}\right) =\gamma n_{\mathrm{p}}|\mu_{\mathrm{p}} \vec{E}|$ & Neumann \\ \hline
-        2 & Outflow, $\vec{n} \cdot\left(-D_{\mathrm{p}} \nabla n_{\mathrm{p}}\right)=0$  & Neumann \\ \hline
-        3 & $n_n=0$ & Dirichlet\\ \hline
-        4 & $\Phi=-U_a$ & Dirichlet \\ \hline
+    \centering\begin{tabular}{|c|c|c}
+        \hline
+        Equation & Boundary condition\\ \hline
+        1 & Total flux $-\vec{n} \cdot\left(-\mu_{\mathrm{e}} \vec{E} -D_{\mathrm{e}} \nabla n_{\mathrm{e}}\right) =\gamma n_{\mathrm{p}}|\mu_{\mathrm{p}} \vec{E}|$ \\ \hline
+        2 & Outflow, $\vec{n} \cdot\left(-D_{\mathrm{p}} \nabla n_{\mathrm{p}}\right)=0$  \\ \hline
+        3 & $n_n=0$ \\ \hline
+        4 & $\Phi=-U_a$ \\ \hline
 
     \end{tabular}
-    \caption{Boundary conditions for the emitter tip (Boundary surface 1)}
 \end{table}
 \clearpage
 
-\subsection{Boundary 2}
+\subsection{Boundary 2: Axis of Symmetry}
 \begin{table}[!h]
-    \centering\begin{tabular}{c|c|c}
-        Equation & Boundary condition & Boundary condition type\\ \hline
-        1 & Axial symmetry $\frac{\partial n_{\mathrm{e}}}{\partial r}=0$ &  Neumann\\ \hline
-        2 & Axial symmetry $\frac{\partial n_{\mathrm{p}}}{\partial r}=0$  & Neumann \\ \hline
-        3 & Axial symmetry $\frac{\partial n_{\mathrm{n}}}{\partial r}=0$ & Neumann\\ \hline
-        4 & Axial symmetry $\frac{\partial \phi}{\partial r}=0 \quad$ & Neumann \\ \hline
+    \centering\begin{tabular}{|c|c|c}
+        \hline
+        Equation & Boundary condition\\ \hline
+        1 & Axial symmetry $\frac{\partial n_{\mathrm{e}}}{\partial r}=0$ \\ \hline
+        2 & Axial symmetry $\frac{\partial n_{\mathrm{p}}}{\partial r}=0$  \\ \hline
+        3 & Axial symmetry $\frac{\partial n_{\mathrm{n}}}{\partial r}=0$ \\ \hline
+        4 & Axial symmetry $\frac{\partial \phi}{\partial r}=0 \quad$ \\ \hline
 
     \end{tabular}
-    \caption{Boundary conditions for  (Boundary surface 2)}
 \end{table}
 
-\subsection{Boundary 3}
+\subsection{Boundary 3: Outflow}
 
 \begin{table}[!h]
-    \centering\begin{tabular}{c|c|c}
-        Equation & Boundary condition & Boundary condition type\\ \hline
-        1 & Open boundary $\begin{array}{c}\vec{n} \cdot\left(-D_{\mathrm{e}} \nabla n_{\mathrm{e}}\right)=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{e}} \vec{E}\right) \geqslant 0 \\ n_{\mathrm{e}}=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{e}} \vec{E}\right)<0\end{array} $ & Neumann/Dirichlet \\ \hline
-        2 & Open boundary $\begin{array}{c}\vec{n} \cdot\left(-D_{\mathrm{p}} \nabla n_{\mathrm{p}}\right)=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{p}} \vec{E}\right) \geqslant 0 \\ n_{\mathrm{p}}=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{p}} \vec{E}\right)<0\end{array} $   & Neumann/Dirichlet \\ \hline
-        3 & Open boundary $\begin{array}{c}\vec{n} \cdot\left(-D_{\mathrm{n}} \nabla n_{\mathrm{n}}\right)=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{n}} \vec{E}\right) \geqslant 0 \\ n_{\mathrm{n}}=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{n}} \vec{E}\right)<0\end{array} $  & Neumann/Dirichlet\\ \hline
-        4 & Ground $\phi=0$ & Dirichlet \\ \hline
+    \centering\begin{tabular}{|c|c|c}
+        \hline
+        Equation & Boundary condition\\ \hline
+        1 & Open boundary $\begin{array}{c}\vec{n} \cdot\left(-D_{\mathrm{e}} \nabla n_{\mathrm{e}}\right)=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{e}} \vec{E}\right) \geqslant 0 \\ n_{\mathrm{e}}=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{e}} \vec{E}\right)<0\end{array} $ \\ \hline
+        2 & Open boundary $\begin{array}{c}\vec{n} \cdot\left(-D_{\mathrm{p}} \nabla n_{\mathrm{p}}\right)=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{p}} \vec{E}\right) \geqslant 0 \\ n_{\mathrm{p}}=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{p}} \vec{E}\right)<0\end{array} $  \\ \hline
+        3 & Open boundary $\begin{array}{c}\vec{n} \cdot\left(-D_{\mathrm{n}} \nabla n_{\mathrm{n}}\right)=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{n}} \vec{E}\right) \geqslant 0 \\ n_{\mathrm{n}}=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{n}} \vec{E}\right)<0\end{array} $ \\ \hline
+        4 & Ground $\phi=0$ \\ \hline
 
     \end{tabular}
-    \caption{Boundary conditions for  (Boundary surface 3)}
 \end{table}
 
-\subsection{Boundary 4}
+\subsection{Boundary 4: Grounded surfaces - cylinder and ground plane}
 
 \begin{table}[!h]
-    \centering\begin{tabular}{c|c|c}
-        Equation & Boundary condition & Boundary condition type\\ \hline
-        1 & Outflow $\vec{n} \cdot\left(-D_{\mathrm{e}} \nabla n_{\mathrm{e}}\right)=0\quad$ & Neumann \\ \hline
-        2 & $n_p=0$  & Dirichlet \\ \hline
-        3 & Outflow $\vec{n} \cdot\left(-D_{\mathrm{n}} \nabla n_{\mathrm{n}}\right)=0$ &Neumann \\ \hline
-        4 & Ground $\phi=0$ & Dirichlet \\ \hline
+    \centering\begin{tabular}{|c|c|c}
+        \hline
+        Equation & Boundary condition\\ \hline
+        1 & Outflow $\vec{n} \cdot\left(-D_{\mathrm{e}} \nabla n_{\mathrm{e}}\right)=0\quad$ \\ \hline
+        2 & $n_p=0$  \\ \hline
+        3 & Outflow $\vec{n} \cdot\left(-D_{\mathrm{n}} \nabla n_{\mathrm{n}}\right)=0$\\ \hline
+        4 & Ground $\phi=0$ \\ \hline
 
     \end{tabular}
-    \caption{Boundary conditions for  (Boundary surface 4)}
 \end{table}
 \clearpage
 
-\subsection{Boundary 5 and 6}
+\subsection{Boundary 5 and 6: Farfield (Insulated)}
+Total flux = convective + diffusive
 
 \begin{table}[!h]
-    \centering\begin{tabular}{c|c|c}
-        Equation & Boundary condition & Boundary condition type\\ \hline
-        1 & Open boundary $\begin{array}{c}\vec{n} \cdot\left(-D_{\mathrm{e}} \nabla n_{\mathrm{e}}\right)=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{e}} \vec{E}\right) \geqslant 0 \\ n_{\mathrm{e}}=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{e}} \vec{E}\right)<0\end{array} $ & Neumann/Dirichlet \\ \hline
-        2 & Open boundary $\begin{array}{c}\vec{n} \cdot\left(-D_{\mathrm{p}} \nabla n_{\mathrm{p}}\right)=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{p}} \vec{E}\right) \geqslant 0 \\ n_{\mathrm{p}}=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{p}} \vec{E}\right)<0\end{array} $   & Neumann/Dirichlet \\ \hline
-        3 & Open boundary $\begin{array}{c}\vec{n} \cdot\left(-D_{\mathrm{n}} \nabla n_{\mathrm{n}}\right)=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{n}} \vec{E}\right) \geqslant 0 \\ n_{\mathrm{n}}=0 ; \vec{n} \cdot\left(-\mu_{\mathrm{n}} \vec{E}\right)<0\end{array} $  & Neumann/Dirichlet\\ \hline
-        4 & Zero charge $\vec{n} \cdot\left(\epsilon \vec{E}\right)<0$ & Neumann \\ \hline
-
+    \centering\begin{tabular}{|c|c|c}
+        \hline
+        Equation & Boundary condition\\ \hline
+        1 & Total flux = 0  \\ \hline
+        2 & Total flux = 0\\ \hline
+        3 & Total flux = 0 \\ \hline
+        4 & Total flux = 0 \\ \hline
     \end{tabular}
-    \caption{Boundary conditions for  (Boundary surfaces 5 and 6)}
+
 \end{table}
 
 
